--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,8 +1,146 @@
 @charset "UTF-8";
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Orbitron:wght@400..900&display=swap');
 
-/*
-    Paleta de cores
+/* Versão Mobile */
 
-    Verde: #49a09d
-    Roxo: #5f2c82
-*/
+:root {
+    --verde: #49a09d;
+    --roxo: #5f2c82;
+    --verdeGradiente: #49a09d7b;
+    --roxoGradiente: #602c8272;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html {
+    padding: 12vh;
+}
+
+body {
+    height: 75vh;
+    background-image: linear-gradient(to top, var(--verde), var(--roxo));
+}
+
+main {
+    background: white;
+    display: block;
+    margin: auto;
+    height: 100%;
+    width: 309px;
+    border-radius: 10px;
+}
+
+main > section#login > div#msg{
+    font: bold 18px Arial, sans-serif;
+    margin: 5px;
+    margin-top: 8px;
+    text-align: center;
+
+}
+
+main > section#login > div#msg > #p1 > strong{
+    text-align: center;
+    font-size: 35px;
+}
+
+main > section#login > div#msg > #p1{
+    font-size: 20px;
+}
+main > section#login > div#msg > #p2{
+    font: bold 13px Arial, sans-serif;
+    text-align: left;
+    margin: 2px 13px;
+} 
+
+main > section#login > #form-login > div{
+    background-color: #5f2c82;
+    display: block;
+    margin: 10px auto;
+    margin-top: 48px;
+    text-align: right;
+    padding: 2px;
+    border-radius: 10px;
+    width: 288px;
+}
+
+main > section#login > #form-login > div#password{
+    margin-top: 10px;
+}
+
+main > section#login > #form-login > div > input{
+    display: inline;
+    width: 230px;
+    padding: 10px;
+    border-radius: 10px;
+}
+main > section#login > #form-login > div > label{
+    font: 500 18px "Open Sans", sans-serif; 
+    display: inline;
+    width: max-content;
+    position: relative;
+    color: white;
+
+    
+    
+}
+main > section#login > #form-login > div > label > #user,
+main > section#login > #form-login > div > label > #key{
+    position: absolute;
+    top: 6%;
+    left: -28px;
+    
+}
+
+main > section#login > #form-login > #btn-enviar{
+    background-color: #49a09d;
+    display: block;
+    border: 0px;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 0px auto;
+    margin-top: 15%;
+    font: bold 18px Arial, sans-serif;
+    color: rgba(255, 255, 255, 0.895); 
+    width: 289px;
+    
+
+} 
+
+main > section#login > #form-login > .button{
+    background-color: #e6f3f2;
+    display: block;
+    border: 0px;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 0px auto;
+    margin-top: 5%;
+    font: bold 18px Arial, sans-serif;
+    color: rgba(108, 107, 107, 0.895); 
+    width: 289px;
+    
+
+} 
+
+main > section#login > #form-login > #btn-enviar:hover {
+    background-color: var(--verdeGradiente);
+
+}
+
+main > section#login > #form-login > .button:hover {
+    background-color: var(--verdeGradiente);
+
+}
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    
+}
+
+
