--- a/estilos/media_queryes.css
+++ b/estilos/media_queryes.css
@@ -2,17 +2,70 @@
 
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 321px) {
+    div#msg{
+        margin: 16px;
+    }
+
+    div#imagem > img{
+        width: 255px;
+    }
+    main{
+        width: 255px;
+    }
+
+    main > section#login > #form-login > div {
+        width: 232px;
+        margin-top: 55px;
+
+        
+    }
+
+    main > section#login > #form-login > div#password{
+        margin-top: 25px;
+    }
+
+    main > section#login > #form-login > div > input{
+        width: 172px;
+    }
+
+    main > section#login > #form-login > #btn-enviar{
+        margin-top: 16%;
+    }
+
+    main > section#login > #form-login > .button, main > section#login > #form-login > #btn-enviar{
+        width: 238px;
+    }
     
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+    body{
+        width: 100%;
+    }
+
+    main{
+        
+        height: 278px;
+        width: 100%;
+    }
+
+    main > section#login > div#imagem{
+        width: 185px;
+    }
+
+    main > section#login{
+        display: inline;
+        
+    }
 
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+
+    
 
 }
 
