--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,9 +1,10 @@
 @charset "UTF-8";
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-    @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Orbitron:wght@400..900&display=swap');
 
 /* Versão Mobile */
+
+/* Extra small devices (Iphone 5) */
+    @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Orbitron:wght@400..900&display=swap');
+
 
 :root {
     --verde: #49a09d;
@@ -18,12 +19,13 @@
 }
 
 html {
-    padding: 12vh;
+    padding: 9vh;
 }
 
 body {
-    height: 75vh;
+    height: 82vh;
     background-image: linear-gradient(to top, var(--verde), var(--roxo));
+    width: 218px;
 }
 
 main {
@@ -31,7 +33,7 @@ main {
     display: block;
     margin: auto;
     height: 100%;
-    width: 309px;
+    width: 218px;
     border-radius: 10px;
 }
 
@@ -45,27 +47,28 @@ main > section#login > div#msg{
 
 main > section#login > div#msg > #p1 > strong{
     text-align: center;
-    font-size: 35px;
+    font-size: 30px;
 }
 
 main > section#login > div#msg > #p1{
-    font-size: 20px;
+    font-size: 16px;
 }
-main > section#login > div#msg > #p2{
-    font: bold 13px Arial, sans-serif;
-    text-align: left;
-    margin: 2px 13px;
-} 
+
+
+div#imagem > img{
+    width: 218px;
+
+}
 
 main > section#login > #form-login > div{
     background-color: #5f2c82;
     display: block;
     margin: 10px auto;
-    margin-top: 48px;
+    margin-top: 30px;
     text-align: right;
     padding: 2px;
     border-radius: 10px;
-    width: 288px;
+    width: 205px;
 }
 
 main > section#login > #form-login > div#password{
@@ -74,7 +77,7 @@ main > section#login > #form-login > div#password{
 
 main > section#login > #form-login > div > input{
     display: inline;
-    width: 230px;
+    width: 146px;
     padding: 10px;
     border-radius: 10px;
 }
@@ -103,25 +106,25 @@ main > section#login > #form-login > #btn-enviar{
     border-radius: 10px;
     padding: 10px;
     margin: 0px auto;
-    margin-top: 15%;
+    margin-top: 10%;
     font: bold 18px Arial, sans-serif;
     color: rgba(255, 255, 255, 0.895); 
-    width: 289px;
+    width: 195px;
     
 
 } 
 
 main > section#login > #form-login > .button{
-    background-color: #e6f3f2;
+    background-color: #c5dfdd;
     display: block;
     border: 0px;
     border-radius: 10px;
     padding: 10px;
     margin: 0px auto;
-    margin-top: 5%;
+    margin-top: 2%;
     font: bold 18px Arial, sans-serif;
     color: rgba(108, 107, 107, 0.895); 
-    width: 289px;
+    width: 195px;
     
 
 } 
@@ -136,11 +139,5 @@ main > section#login > #form-login > .button:hover {
 
 }
 
-}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-    
-}
 
 
