--- a/estilos/media_queryes.css
+++ b/estilos/media_queryes.css
@@ -40,6 +40,10 @@
 }
 
 @media only screen and (min-width: 600px) {
+    body{
+        height: 84vh;
+    }
+
     div#msg{
         margin: 16px;
     }
