--- a/estilos/media_queryes.css
+++ b/estilos/media_queryes.css
@@ -40,8 +40,13 @@
 }
 
 @media only screen and (min-width: 600px) {
+    html{
+        padding: 8vh;
+    }
     body{
-        height: 84vh;
+        height: min-content;
+        width: max-content;
+
     }
 
     div#msg{
