--- a/estilos/media_queryes.css
+++ b/estilos/media_queryes.css
@@ -44,7 +44,7 @@
         padding: 8vh;
     }
     body{
-        height: min-content;
+        height: 78vh;
         width: max-content;
 
     }
