--- a/estilos/media_queryes.css
+++ b/estilos/media_queryes.css
@@ -2,50 +2,13 @@
 
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 321px) {
-    div#msg{
-        margin: 16px;
-    }
 
-    div#imagem > img{
-        width: 255px;
-    }
-    main{
-        width: 255px;
-    }
 
-    main > section#login > #form-login > div {
-        width: 232px;
-        margin-top: 55px;
-
-        
-    }
-
-    main > section#login > #form-login > div#password{
-        margin-top: 25px;
-    }
-
-    main > section#login > #form-login > div > input{
-        width: 172px;
-    }
-
-    main > section#login > #form-login > #btn-enviar{
-        margin-top: 16%;
-    }
-
-    main > section#login > #form-login > .button, main > section#login > #form-login > #btn-enviar{
-        width: 238px;
-    }
-    
-}
-
-@media only screen and (min-width: 600px) {
-    html{
-        padding: 8vh;
-    }
+@media only screen and (min-width: 500px) {
     body{
-        height: 70vh;
+        height: 100vh;
         width: max-content;
+        margin: auto;
 
     }
 
@@ -58,7 +21,6 @@
     }
     main{
         width: 255px;
-        height: 100%;
         
     }
 
