--- a/estilos/style.css
+++ b/estilos/style.css
@@ -51,7 +51,7 @@ main > section#login > div#msg > #p1{
     font-size: 16px;
 }
 
-div#imagem{
+main > section#login > div#imagem{
     width: 218px;
     height: 116px;
     background-color: #5f2c82;
